--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-
+    volumes:
+      - pgdata:/var/lib/postgresql/data
   frontend:
     container_name: "kupipodariday-frontend"
     build:
@@ -32,3 +33,5 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+volumes:
+  pgdata:
