--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:18 AS builder 
-WORKDIR /app 
-COPY package*.json .
-RUN npm ci 
-COPY . . 
-RUN npm run build 
+FROM node:16-alpine AS builder
+WORKDIR /app
+COPY ./package*.json ./
+RUN npm ci --audit=false
+COPY . .
+RUN npm run build
 
-FROM node:18 AS frontend
-RUN npm i serve -g
-COPY --from=builder /app/build ./build
-EXPOSE 3000
-CMD [ "serve", "-s", "build" ]
-# CMD ["serve", "-s"]                                          
+FROM nginx:1.16.0-alpine AS frontend
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx/conf.d/default.conf /etc/nginx/conf.d
+EXPOSE 81
+CMD ["nginx", "-g", "daemon off;"]         
