change nginx version

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ RUN npm ci --audit=false
 COPY . .
 RUN npm run build
 
-FROM nginx:1.16.0-alpine AS frontend
+FROM nginx:latest AS frontend
 COPY --from=builder /app/build /usr/share/nginx/html
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d
 EXPOSE 81
